--- a/Partials/form.html
+++ b/Partials/form.html
@@ -1,29 +1,29 @@
-<div class="container-fluid">
+<div class="container-fluid" >
     <div class="row-fluid">
-        <h2 ng-bind="getLocalizedString('_FormControllerTitle_')"></h2>
+        <h2 ng-bind="'_FormControllerTitle_' | i18n"></h2>
     </div>
     <div class="row-fluid">
         <form name="myForm" class="form-horizontal span5 well">
             <div class="row-fluid">
-                <input type="text" ng-model="person.FirstName" required id="FirstName" name="FirstName" class="input-large" placeholder="'_FirstNameLabel_' | i18n" />
+                <input type="text" ng-model="person.FirstName" required id="FirstName" name="FirstName" class="input-large" placeholder="{{'_FirstNameLabel_' | i18n}}" />
             </div>
             <div class="row-fluid">
                 &nbsp;
             </div>
             <div class="row-fluid">
-                <input type="text" ng-model="person.LastName" required id="LastName" name="LastName" class="input-large" placeholder="'_LastNameLabel_' | i18n"/>
+                <input type="text" ng-model="person.LastName" required id="LastName" name="LastName" class="input-large" placeholder="{{'_LastNameLabel_' | i18n}}"/>
             </div>
             <div class="row-fluid">
                 &nbsp;
             </div>
             <div class="row-fluid">
-                <input type="text" ng-model="person.Email" required id="Email" name="Email" class="input-large" placeholder="'_EMailLabel_' | i18n"/>
+                <input type="text" ng-model="person.Email" required id="Email" name="Email" class="input-large" placeholder="{{'_EMailLabel_' | i18n}}"/>
             </div>
             <div class="row-fluid">
                 &nbsp;
             </div>
             <div class="row-fluid">
-                <textarea ng-model="person.Bio" required id="Bio" name="Bio" class="input-xxlarge" placeholder="'_BioLabel_' | i18n"></textarea>
+                <textarea ng-model="person.Bio" required id="Bio" name="Bio" class="input-xxlarge" placeholder="{{'_BioLabel_' | i18n}}"></textarea>
             </div>
             <div class="row-fluid">
                 &nbsp;
