Updated form to use new i18n attribute directive.

--- a/app/Partials/form.html
+++ b/app/Partials/form.html
@@ -5,25 +5,25 @@
     <div class="row-fluid">
         <form name="myForm" class="form-horizontal span5 well">
             <div class="row-fluid">
-                <input type="text" ng-model="person.FirstName" required id="FirstName" name="FirstName" class="input-large" placeholder="{{'_FirstNameLabel_' | i18n}}" />
+                <input type="text" ng-model="person.FirstName" required id="FirstName" name="FirstName" class="input-large" data-i18n-attr="_FirstNameLabel_|placeholder" />
             </div>
             <div class="row-fluid">
                 &nbsp;
             </div>
             <div class="row-fluid">
-                <input type="text" ng-model="person.LastName" required id="LastName" name="LastName" class="input-large" placeholder="{{'_LastNameLabel_' | i18n}}"/>
+                <input type="text" ng-model="person.LastName" required id="LastName" name="LastName" class="input-large" data-i18n-attr="_LastNameLabel_|placeholder"/>
             </div>
             <div class="row-fluid">
                 &nbsp;
             </div>
             <div class="row-fluid">
-                <input type="text" ng-model="person.Email" required id="Email" name="Email" class="input-large" placeholder="{{'_EMailLabel_' | i18n}}"/>
+                <input type="text" ng-model="person.Email" required id="Email" name="Email" class="input-large" data-i18n-attr="_EMailLabel_|placeholder"/>
             </div>
             <div class="row-fluid">
                 &nbsp;
             </div>
             <div class="row-fluid">
-                <textarea ng-model="person.Bio" required id="Bio" name="Bio" class="input-xxlarge" placeholder="{{'_BioLabel_' | i18n}}"></textarea>
+                <textarea ng-model="person.Bio" required id="Bio" name="Bio" class="input-xxlarge" data-i18n-attr="_BioLabel_|placeholder"></textarea>
             </div>
             <div class="row-fluid">
                 &nbsp;
